--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.14",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.4"
   }
