--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "apexcharts": "^4.1.0",
     "axios": "^1.7.9",
+    "pinia": "^2.3.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
     "vue3-google-login": "^2.0.33"
