--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@vuelidate/validators": "^2.0.4",
     "apexcharts": "^4.1.0",
     "axios": "^1.7.9",
+    "dom-to-image": "^2.6.0",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.2",
+    "jspdf": "^3.0.0",
     "pinia": "^2.3.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
