--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.2",
     "jspdf": "^3.0.0",
+    "pdfmake": "^0.2.18",
     "pinia": "^2.3.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
@@ -26,6 +27,7 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.14",
+    "pdfmake-font-generator": "^1.0.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.10",
