complete pc valid

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,54 +41,156 @@
         "VITE",
         "vuelidate",
         "Vuelidate",
+        "กรกฎาคม",
+        "กรอกได้เมื่อเลือก",
+        "กรุณากรอกข้อมูล",
+        "กรุณากรอกข้อมูลครั",
+        "กรุณากรอกข้อมูลครั้งที่เป็นตัวเลข",
+        "กรุณากรอกข้อมูลคะแนน",
+        "กรุณากรอกข้อมูลฉบับที",
+        "กรุณากรอกข้อมูลชื",
+        "กรุณากรอกข้อมูลปี",
+        "กรุณากรอกข้อมูลปีที",
+        "กรุณากรอกข้อมูลเป็นตัวเลข",
+        "กรุณากรอกข้อมูลลำดับ",
+        "กรุณากรอกข้อมูลวันที",
+        "กรุณากรอกชื",
+        "กรุณากรอกประเภทงานวิจัย",
+        "กรุณากรอกปี",
+        "กรุณากรอกผู",
+        "กรุณากรอกวงเงินงบประมาณการวิจัย",
+        "กรุณากรอกวันประกาศผลการพิจารณา",
+        "กรุณากรอกวันสุดท้ายของการจ่ายค่าตีพิมพ์",
         "กรุณาตรวจสอบความถูกต้องก่อนกดยืนยัน",
+        "กรุณาตรวจสอบคะแนน",
+        "กรุณาเลือกข้อมูล",
+        "กรุณาเลือกข้อมูลเดือน",
+        "กรุณาเลือกฐานข้อมูลสากล",
+        "กรุณาเลือกประเภทโครงการวิจัย",
         "กรุณาอัปโหลดไฟล์",
+        "กันยายน",
+        "การตอบรับให้ลงตีพิมพ์",
+        "การวิจัย",
+        "กุมภาพันธ์",
         "แก้วสีดา",
+        "ของคณะได้ที่เว็บไซต์คณะที่",
+        "ของฐานข้อมูลสากล",
         "ข้อมูลส่วนตัว",
+        "ขอรับการสนับสนุน",
         "ขออนุมัติค่า",
+        "คณะได้ให้การรับรองแล้ว",
         "ค้นหา",
         "ค้นหาผลงานวิชาการ",
+        "คะแนนไม่สามารถต่ำกว่า",
         "งเท่านั",
         "งหมด",
+        "จัดการข้อมูลหลัก",
+        "จำนวนเงิน",
+        "ฉบับที",
         "ดูลายเซ็นที่อัปโหลด",
         "ดูเอกสาร",
+        "เดือน",
+        "โดยมติคณะ",
+        "ได้รับการจัดลำดับ",
+        "ได้รับการตอบรับให้ตีพิมพ์",
         "ตกลง",
+        "ต้องไม่เกิดก่อนวันที่ส่งงานวิจัย",
+        "ต้องไม่เกิน",
         "ตำแหน่ง",
+        "ตุลาคม",
         "แต่ยังไม่ทำ",
+        "ถ้ามี",
         "ทุนวิจัยส่งเสริมส่วนงานวิชาการ",
         "เท่านั",
+        "ธันวาคม",
         "นางภรินทร์",
+        "บทความเข้าระบบ",
         "บทความที่ได้รับการสนับสนุน",
         "บทความที่ได้รับสนับสนุน",
+        "บันทึกข้อมูล",
+        "บันทึกข้อมูลเรียบร้อยแล้ว",
         "แบบเสนอโครงการวิจัย",
+        "ใบแจ้งหนี้ค่าใช้จ่ายสำหรับการตีพิมพ์",
+        "ประจำปี",
+        "ประพันธ์บรรณกิจ",
+        "ประพันธ์อันดับแรก",
         "ประเภทการขอรับสนับสนุน",
+        "ประเภทโครงการวิจัย",
         "ประวัติเอกสาร",
         "ปีงบประมาณ",
+        "ปีที",
+        "ปีไม่สามารถน้อยกว่าปีปัจจุบันได้",
+        "ปีไม่สามารถมากกว่าปีปัจจุบันได้",
+        "เป็นวารสารที่อยู่ในฐานข้อมูลสากล",
         "โปรดกรอกข้อมูลให้ครบถ้วน",
+        "โปรดลองอีกครั้งในภายหลัง",
         "ผลงานวิชาการ",
+        "พฤศจิกายน",
+        "พฤษภาคม",
+        "ฟังก์ชันตรวจสอบปีปัจจุบัน",
         "ภาษาไทย",
         "ภาษาอังกฤษ",
+        "มกราคม",
+        "มิถุนายน",
+        "มีนาคม",
+        "มีรายชื่ออยู่ใน",
+        "เมษายน",
+        "ไม่สามารถต่ำกว่า",
+        "ไม่สามารถน้อยกว่า",
+        "ไม่สามารถส่งข้อมูล",
         "ไม่อนุมัติ",
         "ยอดที่ใช้ของการขออนุมัติค่า",
         "ยืนยันตัวตนด้วยบริการของ",
         "ระบบสนับสนุนงานบริหารงานวิจัย",
+        "ระบุ",
         "รับสนับสนุน",
+        "รายละเอียดผลงานวิจัยที่ส่งเสนอพิจารณา",
+        "รายละเอียดวารสารที่ส่งเสนอพิจารณา",
         "ลายเซ็น",
+        "ลำดับ",
+        "เลขที",
+        "เลือกเดือน",
+        "เลือกวงเงินสนับสนุน",
+        "และวันปัจจุบัน",
         "และสกุลไฟล์เป็น",
+        "วงเงินงบประมาณการวิจัย",
+        "วงเงินตามเกณฑ์การให้การสนับสนุนไม่เกิน",
         "วงเงินที่เบิกได้",
+        "วันที",
+        "วันที่ต้องไม่เกินวันปัจจุบัน",
+        "วันที่ปัจจุบัน",
+        "วันประกาศผลการพิจารณา",
+        "วันสุดท้ายของการจ่ายค่าตีพิมพ์",
         "วารสาร",
+        "วิจัยประยุกต์",
+        "วิจัยพื้นฐาน",
+        "วิจัยและพัฒนา",
+        "วิจัยอื",
         "สถานะ",
         "สถานะเอกสาร",
         "สถิติจ้า",
+        "สามารถตรวจสอบรายชื",
+        "สามารถเบือกได้เพียง",
+        "สามารถเลือกได้เพียง",
         "สามารถอัปโหลดลายเซ็นได้เพียง",
+        "สำเนาบทความ",
+        "สิงหาคม",
+        "หนังสือตอบรับบทความ",
+        "หรือ",
+        "หลักฐานการส่งบทความ",
+        "หลักฐานแสดงการจัดลำดับ",
+        "หลักฐานแสดงการอยู่ในฐานข้อมูลสากล",
         "อแก้ไข",
         "อโครงการวิจัย",
         "องานประชุม",
         "อนุมัติ",
         "อบทความ",
         "อวารสาร",
+        "อแหล่งทุนวิจัย",
+        "อัตราค่าใช้จ่ายที่ประกาศบนหน้าเว็บไซต์",
         "อัปโหลดได้เฉพาะไฟล์",
         "อัปโหลดลายเซ็นเรียบร้อยแล้ว",
-        "อีเมล"
+        "อีเมล",
+        "เอกสารหลักฐานที"
     ]
 }
