--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.2",
     "jspdf": "^3.0.0",
+    "luxon": "^3.5.0",
     "pdfmake": "^0.2.18",
     "pinia": "^2.3.1",
     "vue": "^3.5.12",
