start valid confer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "allhistory",
         "allpost",
         "allstatus",
+        "amout",
         "axios",
         "caltotal",
         "checkfile",
@@ -18,6 +19,7 @@
         "ject",
         "KMITL",
         "Krisuse",
+        "luxon",
         "Mainbox",
         "maintext",
         "nameeng",
@@ -37,26 +39,33 @@
         "Sarabun",
         "SCOPUS",
         "Symp",
+        "trav",
         "updatesignature",
         "VITE",
         "vuelidate",
         "Vuelidate",
         "กรกฎาคม",
+        "กรณีที่จัดการประชุมฯ",
+        "กรณีเบิกค่าใช้จ่ายเต็มวงเงิน",
         "กรอกได้เมื่อเลือก",
+        "กรุงเทพฯ",
         "กรุณากรอกข้อมูล",
         "กรุณากรอกข้อมูลครั",
         "กรุณากรอกข้อมูลครั้งที่เป็นตัวเลข",
         "กรุณากรอกข้อมูลคะแนน",
         "กรุณากรอกข้อมูลฉบับที",
         "กรุณากรอกข้อมูลชื",
+        "กรุณากรอกข้อมูลเดินทาง",
         "กรุณากรอกข้อมูลปี",
         "กรุณากรอกข้อมูลปีที",
         "กรุณากรอกข้อมูลเป็นตัวเลข",
         "กรุณากรอกข้อมูลลำดับ",
+        "กรุณากรอกข้อมูลวันเดินทางกลับ",
         "กรุณากรอกข้อมูลวันที",
         "กรุณากรอกชื",
         "กรุณากรอกประเภทงานวิจัย",
         "กรุณากรอกปี",
+        "กรุณากรอกเป็นจำนวนเต็ม",
         "กรุณากรอกผู",
         "กรุณากรอกวงเงินงบประมาณการวิจัย",
         "กรุณากรอกวันประกาศผลการพิจารณา",
@@ -67,43 +76,81 @@
         "กรุณาเลือกข้อมูลเดือน",
         "กรุณาเลือกฐานข้อมูลสากล",
         "กรุณาเลือกประเภทโครงการวิจัย",
+        "กรุณาเลือกว่าไปต่างประเทศ",
         "กรุณาอัปโหลดไฟล์",
+        "ก่อนการประชุม",
         "กันยายน",
         "การตอบรับให้ลงตีพิมพ์",
+        "การประชุมวิชาการจัดในประเทศ",
+        "การประชุมฯ",
+        "การลา",
         "การวิจัย",
         "กุมภาพันธ์",
+        "แก้ด้วย",
         "แก้วสีดา",
         "ของคณะได้ที่เว็บไซต์คณะที่",
         "ของฐานข้อมูลสากล",
+        "ขอเบิกค่าลงทะเบียนตามที่จ่ายจริง",
         "ข้อมูลส่วนตัว",
         "ขอรับการสนับสนุน",
         "ขออนุมัติค่า",
+        "คณะจัด",
         "คณะได้ให้การรับรองแล้ว",
         "ค้นหา",
         "ค้นหาผลงานวิชาการ",
+        "คะแนน",
         "คะแนนไม่สามารถต่ำกว่า",
+        "ค่าเช่าที",
+        "ค่าเบี้ยเลี้ยงเดินทาง",
+        "ค่าพาหนะเดินทาง",
+        "ค่าภาษีสนามบิน",
+        "ค่าลงทะเบียน",
+        "งได้รับการตีพิมพ์ไม่เกิน",
+        "งแต่",
         "งเท่านั",
         "งหมด",
+        "จดหมายการตอบรับเข้าร่วมประชุม",
+        "จังหวัด",
         "จัดการข้อมูลหลัก",
+        "จำนวน",
         "จำนวนเงิน",
         "ฉบับที",
+        "ชื่อผลงานวิจัยที่นำเสนอ",
+        "เช็คคะแนนได้จาก",
+        "ใช้คะแนนที่คำนวณจาก",
+        "ใช้ประกอบการเบิก",
+        "ใช้ผลการจัดระดับ",
+        "ดีมาก",
         "ดูลายเซ็นที่อัปโหลด",
         "ดูเอกสาร",
+        "เดินทางในต่างประเทศ",
+        "เดินทางในประเทศ",
+        "เดินทางระหว่างประเทศ",
+        "เดินทางวันที",
         "เดือน",
         "โดยมติคณะ",
+        "โดยมีการกำหนดคุณภาพแบ่งเป็น",
+        "ได้มาจาก",
         "ได้รับการจัดลำดับ",
         "ได้รับการตอบรับให้ตีพิมพ์",
         "ตกลง",
         "ต้องไม่เกิดก่อนวันที่ส่งงานวิจัย",
         "ต้องไม่เกิน",
+        "ต่างประเทศ",
+        "ตามที่จ่ายจริง",
         "ตำแหน่ง",
         "ตุลาคม",
         "แต่ยังไม่ทำ",
         "ถ้ามี",
+        "ถึงวันที",
         "ทุนวิจัยส่งเสริมส่วนงานวิชาการ",
         "เท่านั",
         "ธันวาคม",
         "นางภรินทร์",
+        "ในscopus",
+        "ในกรณีลาครั",
+        "ในการลา",
+        "บทความ",
         "บทความเข้าระบบ",
         "บทความที่ได้รับการสนับสนุน",
         "บทความที่ได้รับสนับสนุน",
@@ -111,7 +158,9 @@
         "บันทึกข้อมูลเรียบร้อยแล้ว",
         "แบบเสนอโครงการวิจัย",
         "ใบแจ้งหนี้ค่าใช้จ่ายสำหรับการตีพิมพ์",
+        "ประกอบการเบิก",
         "ประจำปี",
+        "ประเทศ",
         "ประพันธ์บรรณกิจ",
         "ประพันธ์อันดับแรก",
         "ประเภทการขอรับสนับสนุน",
@@ -128,22 +177,35 @@
         "พฤศจิกายน",
         "พฤษภาคม",
         "ฟังก์ชันตรวจสอบปีปัจจุบัน",
+        "ภายในประเทศ",
         "ภาษาไทย",
         "ภาษาอังกฤษ",
         "มกราคม",
+        "มาตรฐาน",
         "มิถุนายน",
+        "มีค่าคะแนน",
         "มีนาคม",
+        "มีผลงานตีพิมพ์ในวารสารในฐานข้อมูล",
         "มีรายชื่ออยู่ใน",
         "เมษายน",
+        "ไม่เกิน",
         "ไม่สามารถต่ำกว่า",
         "ไม่สามารถน้อยกว่า",
         "ไม่สามารถส่งข้อมูล",
         "ไม่อนุมัติ",
+        "ไม่อยู",
         "ยอดที่ใช้ของการขออนุมัติค่า",
         "ยืนยันตัวตนด้วยบริการของ",
+        "แยกตารางไปscore",
+        "รวมทั",
+        "ระดับ",
+        "ระดับดีมาก",
+        "ระดับมาตรฐาน",
         "ระบบสนับสนุนงานบริหารงานวิจัย",
         "ระบุ",
         "รับสนับสนุน",
+        "รายการค่าใช้จ่ายที่ขอเบิกจ่าย",
+        "รายละเอียดการขออนุมัติเดินทาง",
         "รายละเอียดผลงานวิจัยที่ส่งเสนอพิจารณา",
         "รายละเอียดวารสารที่ส่งเสนอพิจารณา",
         "ลายเซ็น",
@@ -151,21 +213,28 @@
         "เลขที",
         "เลือกเดือน",
         "เลือกวงเงินสนับสนุน",
+        "และค่าใช้จ่ายอื",
+        "และไม่อยู่ในฐานข้อมูลสากล",
         "และวันปัจจุบัน",
         "และสกุลไฟล์เป็น",
         "วงเงินงบประมาณการวิจัย",
         "วงเงินตามเกณฑ์การให้การสนับสนุนไม่เกิน",
         "วงเงินที่เบิกได้",
+        "วันเดินทางกลับไม่สามารถเกิดก่อนวันไปได้",
         "วันที",
         "วันที่ต้องไม่เกินวันปัจจุบัน",
         "วันที่ปัจจุบัน",
         "วันประกาศผลการพิจารณา",
+        "วันประกาศผลการพิจารณาบทความ",
         "วันสุดท้ายของการจ่ายค่าตีพิมพ์",
+        "วันสุดท้ายของการลงทะเบียน",
         "วารสาร",
         "วิจัยประยุกต์",
         "วิจัยพื้นฐาน",
         "วิจัยและพัฒนา",
         "วิจัยอื",
+        "ส่งบทความไปยังผู",
+        "สถานที",
         "สถานะ",
         "สถานะเอกสาร",
         "สถิติจ้า",
@@ -177,20 +246,29 @@
         "สิงหาคม",
         "หนังสือตอบรับบทความ",
         "หรือ",
+        "หรือต่างประเทศ",
+        "หรือในประเทศ",
+        "หลักฐานการประชุมวิชาการอยู่ในฐาน",
         "หลักฐานการส่งบทความ",
         "หลักฐานแสดงการจัดลำดับ",
         "หลักฐานแสดงการอยู่ในฐานข้อมูลสากล",
+        "หลักฐานเอกสาร",
+        "อการประชุมทางวิชาการ",
         "อแก้ไข",
         "อโครงการวิจัย",
         "องานประชุม",
+        "องานประชุมวิชาการ",
         "อนุมัติ",
         "อบทความ",
+        "อผลงานวิจัย",
         "อวารสาร",
         "อแหล่งทุนวิจัย",
         "อัตราค่าใช้จ่ายที่ประกาศบนหน้าเว็บไซต์",
         "อัปโหลดได้เฉพาะไฟล์",
         "อัปโหลดลายเซ็นเรียบร้อยแล้ว",
         "อีเมล",
+        "เอกสารแสดงค่าลงทะเบียน",
+        "เอกสารแสดงอัตราแลกเปลี",
         "เอกสารหลักฐานที"
     ]
 }
