--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vuelidate/validators": "^2.0.4",
     "apexcharts": "^4.1.0",
     "axios": "^1.7.9",
+    "chart.js": "^3.9.1",
     "dom-to-image": "^2.6.0",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.2",
@@ -21,6 +22,7 @@
     "pdfmake": "^0.2.18",
     "pinia": "^2.3.1",
     "vue": "^3.5.12",
+    "vue-chart-3": "^3.1.8",
     "vue-router": "^4.4.5",
     "vue3-google-login": "^2.0.33"
   },
