check valid i hate ittttttt

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,7 @@
         "rowitems",
         "Sarabun",
         "SCOPUS",
+        "sjrh",
         "Symp",
         "trav",
         "updatesignature",
@@ -49,6 +50,8 @@
         "กรณีเบิกค่าใช้จ่ายเต็มวงเงิน",
         "กรอกได้เมื่อเลือก",
         "กรุงเทพฯ",
+        "กรุณกรอกปีของ",
+        "กรุณากรอก",
         "กรุณากรอกข้อมูล",
         "กรุณากรอกข้อมูลครั",
         "กรุณากรอกข้อมูลครั้งที่เป็นตัวเลข",
@@ -62,21 +65,45 @@
         "กรุณากรอกข้อมูลลำดับ",
         "กรุณากรอกข้อมูลวันเดินทางกลับ",
         "กรุณากรอกข้อมูลวันที",
+        "กรุณากรอกค่า",
+        "กรุณากรอกค่าเป็น",
+        "กรุณากรอกจำนวนค่าเช่าที",
+        "กรุณากรอกจำนวนค่าเบี้ยเลี้ยงเดินทาง",
+        "กรุณากรอกจำนวนค่าลงทะเบียน",
+        "กรุณากรอกจำนวนบทความ",
+        "กรุณากรอกจำนวนวันที่เช่าที่พัก",
+        "กรุณากรอกจำนวนวันที่เดินทาง",
         "กรุณากรอกชื",
+        "กรุณากรอกประเทศ",
         "กรุณากรอกประเภทงานวิจัย",
         "กรุณากรอกปี",
+        "กรุณากรอกปีที่นำมาคำนวณ",
+        "กรุณากรอกปีให้ตรงกันกับปีของ",
+        "กรุณากรอกปีให้ตรงกันกับปีของค่า",
         "กรุณากรอกเป็นจำนวนเต็ม",
+        "กรุณากรอกเป็นตัวหนังสือ",
         "กรุณากรอกผู",
         "กรุณากรอกวงเงินงบประมาณการวิจัย",
         "กรุณากรอกวันประกาศผลการพิจารณา",
         "กรุณากรอกวันสุดท้ายของการจ่ายค่าตีพิมพ์",
         "กรุณาตรวจสอบความถูกต้องก่อนกดยืนยัน",
         "กรุณาตรวจสอบคะแนน",
+        "กรุณาระบุปี",
+        "กรุณาระบุเป็นจำนวนจริง",
+        "กรุณาระบุเป็นจำนวนเต็ม",
+        "กรุณาระบุเป็นตัวเลข",
+        "กรุณาเลือก",
         "กรุณาเลือกข้อมูล",
         "กรุณาเลือกข้อมูลเดือน",
+        "กรุณาเลือกครั",
+        "กรุณาเลือกจำนวนค่าใช้จ่ายที่เบิกได้",
         "กรุณาเลือกฐานข้อมูลสากล",
         "กรุณาเลือกประเภทโครงการวิจัย",
+        "กรุณาเลือกระดับคุณภาพ",
+        "กรุณาเลือกว่าการประชุมมีอยู",
         "กรุณาเลือกว่าไปต่างประเทศ",
+        "กรุณาเลือกว่ารูปแบบผู้ประพันธ์",
+        "กรุณาเลือกสูตรที่ใช้ในการคำนวณ",
         "กรุณาอัปโหลดไฟล์",
         "ก่อนการประชุม",
         "กันยายน",
@@ -89,6 +116,7 @@
         "แก้ด้วย",
         "แก้วสีดา",
         "ของคณะได้ที่เว็บไซต์คณะที่",
+        "ของงานวิจัย",
         "ของฐานข้อมูลสากล",
         "ขอเบิกค่าลงทะเบียนตามที่จ่ายจริง",
         "ข้อมูลส่วนตัว",
@@ -134,8 +162,10 @@
         "ได้รับการจัดลำดับ",
         "ได้รับการตอบรับให้ตีพิมพ์",
         "ตกลง",
+        "ต้องพิมพ์เป็น",
         "ต้องไม่เกิดก่อนวันที่ส่งงานวิจัย",
         "ต้องไม่เกิน",
+        "ต้องอยู่ในช่วง",
         "ต่างประเทศ",
         "ตามที่จ่ายจริง",
         "ตำแหน่ง",
@@ -169,6 +199,7 @@
         "ปีงบประมาณ",
         "ปีที",
         "ปีไม่สามารถน้อยกว่าปีปัจจุบันได้",
+        "ปีไม่สามารถเป็นปีที่มากกว่าปีปัจจุบัน",
         "ปีไม่สามารถมากกว่าปีปัจจุบันได้",
         "เป็นวารสารที่อยู่ในฐานข้อมูลสากล",
         "โปรดกรอกข้อมูลให้ครบถ้วน",
@@ -212,9 +243,11 @@
         "ลำดับ",
         "เลขที",
         "เลือกเดือน",
+        "เลือกได้แค่ครั",
         "เลือกวงเงินสนับสนุน",
         "และค่าใช้จ่ายอื",
         "และไม่อยู่ในฐานข้อมูลสากล",
+        "และวันกรอกแบบฟอร์มได้",
         "และวันปัจจุบัน",
         "และสกุลไฟล์เป็น",
         "วงเงินงบประมาณการวิจัย",
@@ -233,6 +266,7 @@
         "วิจัยพื้นฐาน",
         "วิจัยและพัฒนา",
         "วิจัยอื",
+        "ส่งงานวิจัย",
         "ส่งบทความไปยังผู",
         "สถานที",
         "สถานะ",
@@ -246,13 +280,18 @@
         "สิงหาคม",
         "หนังสือตอบรับบทความ",
         "หรือ",
+        "หรือคณะเป็นผู้ร่วมจัด",
+        "หรือจังหวัดที่ไปประชุมวิชาการ",
         "หรือต่างประเทศ",
         "หรือในประเทศ",
+        "หรือวันที่จัดงานได้",
+        "หรือวันลงทะเบียนวันสุดท้ายได้",
         "หลักฐานการประชุมวิชาการอยู่ในฐาน",
         "หลักฐานการส่งบทความ",
         "หลักฐานแสดงการจัดลำดับ",
         "หลักฐานแสดงการอยู่ในฐานข้อมูลสากล",
         "หลักฐานเอกสาร",
+        "หากเป็น",
         "อการประชุมทางวิชาการ",
         "อแก้ไข",
         "อโครงการวิจัย",
@@ -260,6 +299,7 @@
         "องานประชุมวิชาการ",
         "อนุมัติ",
         "อบทความ",
+        "อผลงานตีพิมพ์",
         "อผลงานวิจัย",
         "อวารสาร",
         "อแหล่งทุนวิจัย",
