--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "creat",
         "Datafor",
         "Dataforbackend",
+        "Datenoteqal",
         "eoffice",
         "Filekris",
         "finc",
@@ -62,6 +63,8 @@
         "กรุณากรอกข้อมูลปี",
         "กรุณากรอกข้อมูลปีที",
         "กรุณากรอกข้อมูลเป็นตัวเลข",
+        "กรุณากรอกข้อมูลเป็นภาษาไทย",
+        "กรุณากรอกข้อมูลเป็นภาษาอังกฤษ",
         "กรุณากรอกข้อมูลลำดับ",
         "กรุณากรอกข้อมูลวันเดินทางกลับ",
         "กรุณากรอกข้อมูลวันที",
@@ -84,10 +87,14 @@
         "กรุณากรอกเป็นตัวหนังสือ",
         "กรุณากรอกผู",
         "กรุณากรอกวงเงินงบประมาณการวิจัย",
+        "กรุณากรอกวันที่เริ่มต้น",
+        "กรุณากรอกวันที่สิ้นสุด",
         "กรุณากรอกวันประกาศผลการพิจารณา",
         "กรุณากรอกวันสุดท้ายของการจ่ายค่าตีพิมพ์",
+        "กรุณาตรวจสอบ",
         "กรุณาตรวจสอบความถูกต้องก่อนกดยืนยัน",
         "กรุณาตรวจสอบคะแนน",
+        "กรุณาระบุข้อมูลเพิ่มเติม",
         "กรุณาระบุปี",
         "กรุณาระบุเป็นจำนวนจริง",
         "กรุณาระบุเป็นจำนวนเต็ม",
@@ -95,6 +102,8 @@
         "กรุณาเลือก",
         "กรุณาเลือกข้อมูล",
         "กรุณาเลือกข้อมูลเดือน",
+        "กรุณาเลือกข้อมูลมาตรา",
+        "กรุณาเลือกข้อมูลอย่างน้อย",
         "กรุณาเลือกครั",
         "กรุณาเลือกจำนวนค่าใช้จ่ายที่เบิกได้",
         "กรุณาเลือกฐานข้อมูลสากล",
@@ -110,6 +119,7 @@
         "การตอบรับให้ลงตีพิมพ์",
         "การประชุมวิชาการจัดในประเทศ",
         "การประชุมฯ",
+        "การมีส่วนร่วมไม่สามารถกรอกได้มากกว่า",
         "การลา",
         "การวิจัย",
         "กุมภาพันธ์",
@@ -119,6 +129,8 @@
         "ของงานวิจัย",
         "ของฐานข้อมูลสากล",
         "ขอเบิกค่าลงทะเบียนตามที่จ่ายจริง",
+        "ข้อมูลนักวิจัย",
+        "ข้อมูลผู้ขอทุน",
         "ข้อมูลส่วนตัว",
         "ขอรับการสนับสนุน",
         "ขออนุมัติค่า",
@@ -148,7 +160,9 @@
         "ใช้คะแนนที่คำนวณจาก",
         "ใช้ประกอบการเบิก",
         "ใช้ผลการจัดระดับ",
+        "ดัชนี",
         "ดีมาก",
+        "ดึงข้อมูล",
         "ดูลายเซ็นที่อัปโหลด",
         "ดูเอกสาร",
         "เดินทางในต่างประเทศ",
@@ -162,10 +176,18 @@
         "ได้รับการจัดลำดับ",
         "ได้รับการตอบรับให้ตีพิมพ์",
         "ตกลง",
+        "ตรวจเงื่อนไข",
+        "ตรวจว่าวันที่ไม่เกิดก่อน",
+        "ตรวจว่าวันที่ไม่เกิดก่อนวันนี้",
+        "ตรวจว่าวันที่ไม่อยู่หลัง",
+        "ตรวจว่าวันที่ไม่อยู่หลังวันนี้",
+        "ตรวจสอบปีและวันที",
         "ต้องพิมพ์เป็น",
         "ต้องไม่เกิดก่อนวันที่ส่งงานวิจัย",
         "ต้องไม่เกิน",
+        "ต้องไม่เกินวันนี",
         "ต้องอยู่ในช่วง",
+        "ตัวเลือก",
         "ต่างประเทศ",
         "ตามที่จ่ายจริง",
         "ตำแหน่ง",
@@ -176,6 +198,8 @@
         "ทุนวิจัยส่งเสริมส่วนงานวิชาการ",
         "เท่านั",
         "ธันวาคม",
+        "นวัตกรรม",
+        "นสุด",
         "นางภรินทร์",
         "ในscopus",
         "ในกรณีลาครั",
@@ -195,10 +219,12 @@
         "ประพันธ์อันดับแรก",
         "ประเภทการขอรับสนับสนุน",
         "ประเภทโครงการวิจัย",
+        "ประวัติด้านสิ่งประดิษฐ์",
         "ประวัติเอกสาร",
         "ปีงบประมาณ",
         "ปีที",
         "ปีไม่สามารถน้อยกว่าปีปัจจุบันได้",
+        "ปีไม่สามารถเป็นปีที่มากกว่าปีนี้",
         "ปีไม่สามารถเป็นปีที่มากกว่าปีปัจจุบัน",
         "ปีไม่สามารถมากกว่าปีปัจจุบันได้",
         "เป็นวารสารที่อยู่ในฐานข้อมูลสากล",
@@ -213,13 +239,21 @@
         "ภาษาอังกฤษ",
         "มกราคม",
         "มาตรฐาน",
+        "มาตรฐานการวิจัย",
+        "มาตรา",
         "มิถุนายน",
+        "มีการใช้พันธุ",
+        "มีการใช้สัตว์ทดลอง",
+        "มีการวิจัยในมนุษย์",
         "มีค่าคะแนน",
         "มีนาคม",
         "มีผลงานตีพิมพ์ในวารสารในฐานข้อมูล",
         "มีรายชื่ออยู่ใน",
         "เมษายน",
         "ไม่เกิน",
+        "ไม่มีวัตถุประสงค์เพื่อประโยชน์ทางการค้า",
+        "ไม่สามารถกรอกวันประกาศผลก่อน",
+        "ไม่สามารถกรอกวันประกาศผลก่อนวันที่สมัคร",
         "ไม่สามารถต่ำกว่า",
         "ไม่สามารถน้อยกว่า",
         "ไม่สามารถส่งข้อมูล",
@@ -229,14 +263,17 @@
         "ยืนยันตัวตนด้วยบริการของ",
         "แยกตารางไปscore",
         "รวมทั",
+        "ร้อยละการมีส่วนร่วมในโครงการ",
         "ระดับ",
         "ระดับดีมาก",
         "ระดับมาตรฐาน",
         "ระบบสนับสนุนงานบริหารงานวิจัย",
         "ระบุ",
+        "ระยะเวลาโครงการ",
         "รับสนับสนุน",
         "รายการค่าใช้จ่ายที่ขอเบิกจ่าย",
         "รายละเอียดการขออนุมัติเดินทาง",
+        "รายละเอียดเบื้องต้น",
         "รายละเอียดผลงานวิจัยที่ส่งเสนอพิจารณา",
         "รายละเอียดวารสารที่ส่งเสนอพิจารณา",
         "ลายเซ็น",
@@ -254,6 +291,7 @@
         "วงเงินตามเกณฑ์การให้การสนับสนุนไม่เกิน",
         "วงเงินที่เบิกได้",
         "วันเดินทางกลับไม่สามารถเกิดก่อนวันไปได้",
+        "วันเดินทางไม่สามารถเกิดก่อน",
         "วันที",
         "วันที่ต้องไม่เกินวันปัจจุบัน",
         "วันที่ปัจจุบัน",
@@ -266,14 +304,18 @@
         "วิจัยพื้นฐาน",
         "วิจัยและพัฒนา",
         "วิจัยอื",
+        "สกุล",
         "ส่งงานวิจัย",
         "ส่งบทความไปยังผู",
         "สถานที",
         "สถานะ",
         "สถานะเอกสาร",
         "สถิติจ้า",
+        "สอดคล้องกับกลุ่มวิจัย",
+        "สัดส่วนการวิจัย",
         "สามารถตรวจสอบรายชื",
         "สามารถเบือกได้เพียง",
+        "สามารถมีตัวเลขและอักขระพิเศษได้",
         "สามารถเลือกได้เพียง",
         "สามารถอัปโหลดลายเซ็นได้เพียง",
         "สำเนาบทความ",
@@ -284,31 +326,197 @@
         "หรือจังหวัดที่ไปประชุมวิชาการ",
         "หรือต่างประเทศ",
         "หรือในประเทศ",
+        "หรือประกาศผลได้",
+        "หรือเป็นวันนี",
         "หรือวันที่จัดงานได้",
         "หรือวันลงทะเบียนวันสุดท้ายได้",
+        "หรือวันสมัคร",
         "หลักฐานการประชุมวิชาการอยู่ในฐาน",
         "หลักฐานการส่งบทความ",
         "หลักฐานแสดงการจัดลำดับ",
         "หลักฐานแสดงการอยู่ในฐานข้อมูลสากล",
         "หลักฐานเอกสาร",
+        "หัวหน้าโครงการ",
         "หากเป็น",
         "อการประชุมทางวิชาการ",
         "อแก้ไข",
         "อโครงการวิจัย",
         "องานประชุม",
         "องานประชุมวิชาการ",
+        "อตนเองในฐาน",
         "อนุมัติ",
         "อบทความ",
+        "อประโยชน์ทางการค้า",
         "อผลงานตีพิมพ์",
         "อผลงานวิจัย",
         "อวารสาร",
         "อแหล่งทุนวิจัย",
         "อัตราค่าใช้จ่ายที่ประกาศบนหน้าเว็บไซต์",
+        "อัปเดตค่า",
         "อัปโหลดได้เฉพาะไฟล์",
         "อัปโหลดลายเซ็นเรียบร้อยแล้ว",
         "อีเมล",
         "เอกสารแสดงค่าลงทะเบียน",
         "เอกสารแสดงอัตราแลกเปลี",
         "เอกสารหลักฐานที"
+    ],
+    "cSpell.ignoreWords": [
+        "กระบี",
+        "กรีซ",
+        "กรุงเทพมหานคร",
+        "กรุณาเลือกประเทศ",
+        "กัมพูชา",
+        "กาญจนบุรี",
+        "กานา",
+        "กาฬสินธุ",
+        "กำแพงเพชร",
+        "ขอนแก่น",
+        "คาซัคสถาน",
+        "คีร์กีซสถาน",
+        "งเศส",
+        "จันทบุรี",
+        "ฉะเชิงเทรา",
+        "ชลบุรี",
+        "ชัยนาท",
+        "ชัยภูมิ",
+        "ชิลี",
+        "ชุมพร",
+        "ตรัง",
+        "ตราด",
+        "ทาจิกิสถาน",
+        "นครนายก",
+        "นครปฐม",
+        "นครพนม",
+        "นครราชสีมา",
+        "นครศรีธรรมราช",
+        "นครสวรรค์",
+        "นนทบุรี",
+        "นราธิวาส",
+        "นอร์เวย์",
+        "นิวซีแลนด์",
+        "น่าน",
+        "บราซิล",
+        "บรูไน",
+        "บังกลาเทศ",
+        "บัลแกเรีย",
+        "บึงกาฬ",
+        "บุรีรัมย์",
+        "ปทุมธานี",
+        "ประจวบคีรีขันธ์",
+        "ปราจีนบุรี",
+        "ปัตตานี",
+        "ปากีสถาน",
+        "ปารากวัย",
+        "พระนครศรีอยุธยา",
+        "พะเยา",
+        "พังงา",
+        "พัทลุง",
+        "พิจิตร",
+        "พิษณุโลก",
+        "ฟินแลนด์",
+        "ฟิลิปปินส์",
+        "ภูฏาน",
+        "ภูเก็ต",
+        "มหาสารคาม",
+        "มองโกเลีย",
+        "มอลตา",
+        "มัลดีฟส์",
+        "มาเลเซีย",
+        "มุกดาหาร",
+        "ยะลา",
+        "ยูเครน",
+        "ยโสธร",
+        "ระนอง",
+        "ระยอง",
+        "รัสเซีย",
+        "ราชบุรี",
+        "ร้อยเอ็ด",
+        "ลพบุรี",
+        "ลักเซมเบิร์ก",
+        "ลัตเวีย",
+        "ลำปาง",
+        "ลำพูน",
+        "ลิทัวเนีย",
+        "ศรีลังกา",
+        "ศรีสะเกษ",
+        "สกลนคร",
+        "สงขลา",
+        "สตูล",
+        "สมุทรปราการ",
+        "สมุทรสงคราม",
+        "สมุทรสาคร",
+        "สระบุรี",
+        "สระแก้ว",
+        "สวิตเซอร์แลนด์",
+        "สวีเดน",
+        "สหรัฐอเมริกา",
+        "สหราชอาณาจักร",
+        "สิงคโปร์",
+        "สิงห์บุรี",
+        "สุพรรณบุรี",
+        "สุราษฎร์ธานี",
+        "สุรินทร์",
+        "สุโขทัย",
+        "สเปน",
+        "สโลวาเกีย",
+        "สโลวีเนีย",
+        "หนองคาย",
+        "หนองบัวลำภู",
+        "ออสเตรีย",
+        "ออสเตรเลีย",
+        "อาร์เจนตินา",
+        "อำนาจเจริญ",
+        "อิตาลี",
+        "อินเดีย",
+        "อินโดนีเซีย",
+        "อียิปต์",
+        "อุซเบกิสถาน",
+        "อุดรธานี",
+        "อุตรดิตถ์",
+        "อุทัยธานี",
+        "อุบลราชธานี",
+        "อุรุกวัย",
+        "อ่างทอง",
+        "ฮังการี",
+        "ฮ่องกง",
+        "เกาหลีใต้",
+        "เคนยา",
+        "เชียงราย",
+        "เชียงใหม่",
+        "เช็ก",
+        "เดนมาร์ก",
+        "เติร์กเมนิสถาน",
+        "เนปาล",
+        "เนเธอร์แลนด์",
+        "เบลเยียม",
+        "เปรู",
+        "เพชรบุรี",
+        "เพชรบูรณ์",
+        "เมียนมาร์",
+        "เม็กซิโก",
+        "เยอรมนี",
+        "เวียดนาม",
+        "เวเนซุเอลา",
+        "เอกวาดอร์",
+        "เอธิโอเปีย",
+        "เอสโตเนีย",
+        "แคนาดา",
+        "แทนซาเนีย",
+        "แพร่",
+        "แม่ฮ่องสอน",
+        "แอฟริกาใต้",
+        "แอลจีเรีย",
+        "โครเอเชีย",
+        "โคลอมเบีย",
+        "โบลิเวีย",
+        "โปรตุเกส",
+        "โปแลนด์",
+        "โมร็อกโก",
+        "โรมาเนีย",
+        "ไซปรัส",
+        "ไต้หวัน",
+        "ไนจีเรีย",
+        "ไอซ์แลนด์",
+        "ไอร์แลนด์"
     ]
 }
