--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^3.5.12",
     "vue-chart-3": "^3.1.8",
     "vue-router": "^4.4.5",
+    "vue-select": "^4.0.0-beta.6",
     "vue3-google-login": "^2.0.33"
   },
   "devDependencies": {
