--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "creat",
         "Datafor",
         "Dataforbackend",
+        "dataforupdate",
         "Datenoteqal",
         "eoffice",
         "Filekris",
@@ -39,13 +40,16 @@
         "rowitems",
         "Sarabun",
         "SCOPUS",
+        "setfile",
         "sjrh",
         "Symp",
         "trav",
         "updatesignature",
+        "urlfile",
         "VITE",
         "vuelidate",
         "Vuelidate",
+        "ก็ผ่าน",
         "กรกฎาคม",
         "กรณีที่จัดการประชุมฯ",
         "กรณีเบิกค่าใช้จ่ายเต็มวงเงิน",
@@ -123,6 +127,7 @@
         "การลา",
         "การวิจัย",
         "กุมภาพันธ์",
+        "เกิดข้อผิดพลาดในการบันทึกข้อมูล",
         "แก้ด้วย",
         "แก้วสีดา",
         "ของคณะได้ที่เว็บไซต์คณะที่",
@@ -134,6 +139,8 @@
         "ข้อมูลส่วนตัว",
         "ขอรับการสนับสนุน",
         "ขออนุมัติค่า",
+        "เข้าที่ประชุม",
+        "คณบดี",
         "คณะจัด",
         "คณะได้ให้การรับรองแล้ว",
         "ค้นหา",
@@ -145,10 +152,12 @@
         "ค่าพาหนะเดินทาง",
         "ค่าภาษีสนามบิน",
         "ค่าลงทะเบียน",
+        "โครงการวิจัย",
         "งได้รับการตีพิมพ์ไม่เกิน",
         "งแต่",
         "งเท่านั",
         "งหมด",
+        "จดหมายการตอบรับ",
         "จดหมายการตอบรับเข้าร่วมประชุม",
         "จังหวัด",
         "จัดการข้อมูลหลัก",
@@ -156,7 +165,9 @@
         "จำนวนเงิน",
         "ฉบับที",
         "ชื่อผลงานวิจัยที่นำเสนอ",
+        "ชื่อไฟล์ที่บันทึก",
         "เช็คคะแนนได้จาก",
+        "เช็คว่าเป็น",
         "ใช้คะแนนที่คำนวณจาก",
         "ใช้ประกอบการเบิก",
         "ใช้ผลการจัดระดับ",
@@ -182,6 +193,7 @@
         "ตรวจว่าวันที่ไม่อยู่หลัง",
         "ตรวจว่าวันที่ไม่อยู่หลังวันนี้",
         "ตรวจสอบปีและวันที",
+        "ตรวจสอบว่าทุกค่ามีข้อมูล",
         "ต้องพิมพ์เป็น",
         "ต้องไม่เกิดก่อนวันที่ส่งงานวิจัย",
         "ต้องไม่เกิน",
@@ -194,6 +206,7 @@
         "ตุลาคม",
         "แต่ยังไม่ทำ",
         "ถ้ามี",
+        "ถ้าไม่มีไฟล์",
         "ถึงวันที",
         "ทุนวิจัยส่งเสริมส่วนงานวิชาการ",
         "เท่านั",
@@ -209,8 +222,10 @@
         "บทความที่ได้รับการสนับสนุน",
         "บทความที่ได้รับสนับสนุน",
         "บันทึกข้อมูล",
+        "บันทึกข้อมูลเรียบร้อย",
         "บันทึกข้อมูลเรียบร้อยแล้ว",
         "แบบเสนอโครงการวิจัย",
+        "ใบแจ้งหนี้ค่าใช้จ่าย",
         "ใบแจ้งหนี้ค่าใช้จ่ายสำหรับการตีพิมพ์",
         "ประกอบการเบิก",
         "ประจำปี",
@@ -229,8 +244,12 @@
         "ปีไม่สามารถมากกว่าปีปัจจุบันได้",
         "เป็นวารสารที่อยู่ในฐานข้อมูลสากล",
         "โปรดกรอกข้อมูลให้ครบถ้วน",
+        "โปรดเข้าสู่ระบบใหม่อีกครั้ง",
         "โปรดลองอีกครั้งในภายหลัง",
         "ผลงานวิชาการ",
+        "ฝ่ายบริหารการเงิน",
+        "ฝ่ายบริหารงานวิจัย",
+        "ฝ่ายบริหารทรัพยากรบุคคล",
         "พฤศจิกายน",
         "พฤษภาคม",
         "ฟังก์ชันตรวจสอบปีปัจจุบัน",
@@ -251,6 +270,8 @@
         "มีรายชื่ออยู่ใน",
         "เมษายน",
         "ไม่เกิน",
+        "ไม่ใช่",
+        "ไม่บังคับ",
         "ไม่มีวัตถุประสงค์เพื่อประโยชน์ทางการค้า",
         "ไม่สามารถกรอกวันประกาศผลก่อน",
         "ไม่สามารถกรอกวันประกาศผลก่อนวันที่สมัคร",
@@ -263,7 +284,9 @@
         "ยืนยันตัวตนด้วยบริการของ",
         "แยกตารางไปscore",
         "รวมทั",
+        "รองคณบดี",
         "ร้อยละการมีส่วนร่วมในโครงการ",
+        "รออนุมัติ",
         "ระดับ",
         "ระดับดีมาก",
         "ระดับมาตรฐาน",
@@ -283,8 +306,10 @@
         "เลือกได้แค่ครั",
         "เลือกวงเงินสนับสนุน",
         "และค่าใช้จ่ายอื",
+        "และจำเป็นต้องกรอกทุกช่อง",
         "และไม่อยู่ในฐานข้อมูลสากล",
         "และวันกรอกแบบฟอร์มได้",
+        "และวันประกาศผลได้",
         "และวันปัจจุบัน",
         "และสกุลไฟล์เป็น",
         "วงเงินงบประมาณการวิจัย",
@@ -331,13 +356,17 @@
         "หรือวันที่จัดงานได้",
         "หรือวันลงทะเบียนวันสุดท้ายได้",
         "หรือวันสมัคร",
+        "หลักฐานการจัดลำดับ",
         "หลักฐานการประชุมวิชาการอยู่ในฐาน",
         "หลักฐานการส่งบทความ",
+        "หลักฐานการอยู่ในฐานข้อมูลสากล",
         "หลักฐานแสดงการจัดลำดับ",
         "หลักฐานแสดงการอยู่ในฐานข้อมูลสากล",
         "หลักฐานเอกสาร",
         "หัวหน้าโครงการ",
         "หากเป็น",
+        "โหลดเอกสาร",
+        "อการประชุม",
         "อการประชุมทางวิชาการ",
         "อแก้ไข",
         "อโครงการวิจัย",
@@ -356,6 +385,7 @@
         "อัปโหลดได้เฉพาะไฟล์",
         "อัปโหลดลายเซ็นเรียบร้อยแล้ว",
         "อีเมล",
+        "เอกสารประชาสัมพันธ์การจัดการประชุม",
         "เอกสารแสดงค่าลงทะเบียน",
         "เอกสารแสดงอัตราแลกเปลี",
         "เอกสารหลักฐานที"
@@ -407,6 +437,7 @@
         "ปัตตานี",
         "ปากีสถาน",
         "ปารากวัย",
+        "ฝ่ายบริหารการเงิน",
         "พระนครศรีอยุธยา",
         "พะเยา",
         "พังงา",
