--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,8 +24,12 @@
         "luxon",
         "Mainbox",
         "maintext",
+        "mynotification",
         "nameeng",
         "nameth",
+        "noti",
+        "Noti",
+        "Notificationby",
         "numapprove",
         "Offi",
         "Offic",
@@ -121,6 +125,7 @@
         "ก่อนการประชุม",
         "กันยายน",
         "การตอบรับให้ลงตีพิมพ์",
+        "การประชุมทางวิชาการ",
         "การประชุมวิชาการจัดในประเทศ",
         "การประชุมฯ",
         "การมีส่วนร่วมไม่สามารถกรอกได้มากกว่า",
@@ -128,6 +133,8 @@
         "การวิจัย",
         "กุมภาพันธ์",
         "เกิดข้อผิดพลาดในการบันทึกข้อมูล",
+        "แก้user",
+        "แก้เงื่อนไขการพิจารณา",
         "แก้ด้วย",
         "แก้วสีดา",
         "ของคณะได้ที่เว็บไซต์คณะที่",
@@ -140,6 +147,7 @@
         "ขอรับการสนับสนุน",
         "ขออนุมัติค่า",
         "เข้าที่ประชุม",
+        "เข้าสู่ระบบ",
         "คณบดี",
         "คณะจัด",
         "คณะได้ให้การรับรองแล้ว",
@@ -203,6 +211,7 @@
         "ต่างประเทศ",
         "ตามที่จ่ายจริง",
         "ตำแหน่ง",
+        "ตีพิมพ์ผลงานวารสาร",
         "ตุลาคม",
         "แต่ยังไม่ทำ",
         "ถ้ามี",
@@ -234,6 +243,7 @@
         "ประพันธ์อันดับแรก",
         "ประเภทการขอรับสนับสนุน",
         "ประเภทโครงการวิจัย",
+        "ประวัติการยื",
         "ประวัติด้านสิ่งประดิษฐ์",
         "ประวัติเอกสาร",
         "ปีงบประมาณ",
@@ -334,8 +344,10 @@
         "ส่งบทความไปยังผู",
         "สถานที",
         "สถานะ",
+        "สถานะและประวัติ",
         "สถานะเอกสาร",
         "สถิติจ้า",
+        "สรุปผลแบบสถิติ",
         "สอดคล้องกับกลุ่มวิจัย",
         "สัดส่วนการวิจัย",
         "สามารถตรวจสอบรายชื",
@@ -380,11 +392,13 @@
         "อผลงานวิจัย",
         "อวารสาร",
         "อแหล่งทุนวิจัย",
+        "ออกจากระบบ",
         "อัตราค่าใช้จ่ายที่ประกาศบนหน้าเว็บไซต์",
         "อัปเดตค่า",
         "อัปโหลดได้เฉพาะไฟล์",
         "อัปโหลดลายเซ็นเรียบร้อยแล้ว",
         "อีเมล",
+        "เอกสารที่อนุมัติแล้ว",
         "เอกสารประชาสัมพันธ์การจัดการประชุม",
         "เอกสารแสดงค่าลงทะเบียน",
         "เอกสารแสดงอัตราแลกเปลี",
