--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -122,6 +122,7 @@
         "กรุณาเลือกว่ารูปแบบผู้ประพันธ์",
         "กรุณาเลือกสูตรที่ใช้ในการคำนวณ",
         "กรุณาอัปโหลดไฟล์",
+        "ก่อนกรอง",
         "ก่อนการประชุม",
         "กันยายน",
         "การตอบรับให้ลงตีพิมพ์",
@@ -133,6 +134,7 @@
         "การวิจัย",
         "กุมภาพันธ์",
         "เกิดข้อผิดพลาดในการบันทึกข้อมูล",
+        "เกิดข้อผิดพลาดในการอัปเดต",
         "แก้user",
         "แก้เงื่อนไขการพิจารณา",
         "แก้ด้วย",
@@ -201,6 +203,7 @@
         "ตรวจว่าวันที่ไม่อยู่หลัง",
         "ตรวจว่าวันที่ไม่อยู่หลังวันนี้",
         "ตรวจสอบปีและวันที",
+        "ตรวจสอบว่าข้อมูลเป็น",
         "ตรวจสอบว่าทุกค่ามีข้อมูล",
         "ต้องพิมพ์เป็น",
         "ต้องไม่เกิดก่อนวันที่ส่งงานวิจัย",
@@ -217,6 +220,7 @@
         "ถ้ามี",
         "ถ้าไม่มีไฟล์",
         "ถึงวันที",
+        "ทันที",
         "ทุนวิจัยส่งเสริมส่วนงานวิชาการ",
         "เท่านั",
         "ธันวาคม",
@@ -356,6 +360,7 @@
         "สามารถเลือกได้เพียง",
         "สามารถอัปโหลดลายเซ็นได้เพียง",
         "สำเนาบทความ",
+        "สำเร็จ",
         "สิงหาคม",
         "หนังสือตอบรับบทความ",
         "หรือ",
@@ -375,6 +380,7 @@
         "หลักฐานแสดงการจัดลำดับ",
         "หลักฐานแสดงการอยู่ในฐานข้อมูลสากล",
         "หลักฐานเอกสาร",
+        "หลังอัปเดต",
         "หัวหน้าโครงการ",
         "หากเป็น",
         "โหลดเอกสาร",
@@ -384,6 +390,7 @@
         "อโครงการวิจัย",
         "องานประชุม",
         "องานประชุมวิชาการ",
+        "องานวิจัย",
         "อตนเองในฐาน",
         "อนุมัติ",
         "อบทความ",
@@ -394,10 +401,13 @@
         "อแหล่งทุนวิจัย",
         "ออกจากระบบ",
         "อัตราค่าใช้จ่ายที่ประกาศบนหน้าเว็บไซต์",
+        "อัปเดตข้อมูลบนหน้า",
         "อัปเดตค่า",
+        "อัปเดตสถานะของทุก",
         "อัปโหลดได้เฉพาะไฟล์",
         "อัปโหลดลายเซ็นเรียบร้อยแล้ว",
         "อีเมล",
+        "เอกสารที",
         "เอกสารที่อนุมัติแล้ว",
         "เอกสารประชาสัมพันธ์การจัดการประชุม",
         "เอกสารแสดงค่าลงทะเบียน",
