--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -261,6 +261,8 @@
         "โปรดเข้าสู่ระบบใหม่อีกครั้ง",
         "โปรดลองอีกครั้งในภายหลัง",
         "ผลงานวิชาการ",
+        "ผู้ช่วยผู้อำนวยการ",
+        "ฝ่ายการเงิน",
         "ฝ่ายบริหารการเงิน",
         "ฝ่ายบริหารงานวิจัย",
         "ฝ่ายบริหารทรัพยากรบุคคล",
