--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "html2pdf.js": "^0.10.2",
     "jspdf": "^3.0.0",
     "luxon": "^3.5.0",
+    "papaparse": "^5.5.2",
     "pdfmake": "^0.2.18",
     "pinia": "^2.3.1",
     "vue": "^3.5.12",
@@ -30,7 +31,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
-    "daisyui": "^4.12.14",
+    "daisyui": "^5.0.9",
     "pdfmake-font-generator": "^1.0.1",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
