--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apexcharts": "^4.1.0",
     "axios": "^1.7.9",
     "chart.js": "^3.9.1",
+    "chartjs": "^0.3.24",
     "dom-to-image": "^2.6.0",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.2",
