--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "eoffice",
         "Filekris",
         "finc",
+        "formattedres",
         "insecter",
         "ISSN",
         "ject",
@@ -25,6 +26,7 @@
         "Mainbox",
         "maintext",
         "mynotification",
+        "mytabs",
         "nameeng",
         "nameth",
         "noti",
@@ -40,6 +42,7 @@
         "Radiowith",
         "reciving",
         "regist",
+        "registerables",
         "responsefile",
         "rowitems",
         "Sarabun",
@@ -128,6 +131,7 @@
         "การตอบรับให้ลงตีพิมพ์",
         "การประชุมทางวิชาการ",
         "การประชุมวิชาการจัดในประเทศ",
+        "การประชุมวิชาการนานาชาติ",
         "การประชุมฯ",
         "การมีส่วนร่วมไม่สามารถกรอกได้มากกว่า",
         "การลา",
@@ -142,7 +146,10 @@
         "ของคณะได้ที่เว็บไซต์คณะที่",
         "ของงานวิจัย",
         "ของฐานข้อมูลสากล",
+        "ขอเบิก",
         "ขอเบิกค่าลงทะเบียนตามที่จ่ายจริง",
+        "ข้อมูลทั้งหมดของ",
+        "ข้อมูลทั้งหมดของโครงงานวิชาการ",
         "ข้อมูลนักวิจัย",
         "ข้อมูลผู้ขอทุน",
         "ข้อมูลส่วนตัว",
@@ -153,19 +160,28 @@
         "คณบดี",
         "คณะจัด",
         "คณะได้ให้การรับรองแล้ว",
+        "คณะร่วมจัด",
         "ค้นหา",
         "ค้นหาผลงานวิชาการ",
         "คะแนน",
         "คะแนนไม่สามารถต่ำกว่า",
         "ค่าเช่าที",
+        "ค่าใช้จ่ายทั",
+        "ค่าใช้จ่ายในการลงตีพิมพ์",
+        "ค่าใช้จ่ายอื",
+        "คาดว่าจะตีพิมพ์ในวารสาร",
         "ค่าเบี้ยเลี้ยงเดินทาง",
         "ค่าพาหนะเดินทาง",
         "ค่าภาษีสนามบิน",
         "ค่าลงทะเบียน",
+        "คุณภาพการประชุม",
         "โครงการวิจัย",
+        "โครงงานวิชาการ",
         "งได้รับการตีพิมพ์ไม่เกิน",
         "งแต่",
         "งเท่านั",
+        "งบประมาณคงเหลือของการประชุมวิชาการ",
+        "งบประมาณทั",
         "งหมด",
         "จดหมายการตอบรับ",
         "จดหมายการตอบรับเข้าร่วมประชุม",
@@ -173,6 +189,8 @@
         "จัดการข้อมูลหลัก",
         "จำนวน",
         "จำนวนเงิน",
+        "จำนวนเงินคงเหลือทั",
+        "จำนวนเงินที่ใช้ไปแล้ว",
         "ฉบับที",
         "ชื่อผลงานวิจัยที่นำเสนอ",
         "ชื่อไฟล์ที่บันทึก",
@@ -260,6 +278,8 @@
         "โปรดกรอกข้อมูลให้ครบถ้วน",
         "โปรดเข้าสู่ระบบใหม่อีกครั้ง",
         "โปรดลองอีกครั้งในภายหลัง",
+        "ไปหน้าสรุปผลเป็นตาราง",
+        "ผลงานจากโครงการวิจัยเรื",
         "ผลงานวิชาการ",
         "ผู้ช่วยผู้อำนวยการ",
         "ฝ่ายการเงิน",
@@ -273,9 +293,11 @@
         "ภาษาไทย",
         "ภาษาอังกฤษ",
         "มกราคม",
+        "มวิจัย",
         "มาตรฐาน",
         "มาตรฐานการวิจัย",
         "มาตรา",
+        "มาตราทางการค้า",
         "มิถุนายน",
         "มีการใช้พันธุ",
         "มีการใช้สัตว์ทดลอง",
@@ -288,6 +310,7 @@
         "ไม่เกิน",
         "ไม่ใช่",
         "ไม่บังคับ",
+        "ไม่มีข้อมูล",
         "ไม่มีวัตถุประสงค์เพื่อประโยชน์ทางการค้า",
         "ไม่สามารถกรอกวันประกาศผลก่อน",
         "ไม่สามารถกรอกวันประกาศผลก่อนวันที่สมัคร",
@@ -315,8 +338,10 @@
         "รายละเอียดเบื้องต้น",
         "รายละเอียดผลงานวิจัยที่ส่งเสนอพิจารณา",
         "รายละเอียดวารสารที่ส่งเสนอพิจารณา",
+        "ลาครั",
         "ลายเซ็น",
         "ลำดับ",
+        "ลำดับที",
         "เลขที",
         "เลือกเดือน",
         "เลือกได้แค่ครั",
@@ -338,9 +363,11 @@
         "วันที่ปัจจุบัน",
         "วันประกาศผลการพิจารณา",
         "วันประกาศผลการพิจารณาบทความ",
+        "วันสิ",
         "วันสุดท้ายของการจ่ายค่าตีพิมพ์",
         "วันสุดท้ายของการลงทะเบียน",
         "วารสาร",
+        "วารสารอยู่ในข้อมูลสากล",
         "วิจัยประยุกต์",
         "วิจัยพื้นฐาน",
         "วิจัยและพัฒนา",
@@ -429,6 +456,7 @@
         "ขอนแก่น",
         "คาซัคสถาน",
         "คีร์กีซสถาน",
+        "งบประมาณคงเหลือของ",
         "งเศส",
         "จันทบุรี",
         "ฉะเชิงเทรา",
