--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "axios",
         "caltotal",
         "checkfile",
+        "countwithdraw",
         "creat",
         "Datafor",
         "Dataforbackend",
@@ -149,6 +150,7 @@
         "ขอเบิก",
         "ขอเบิกค่าลงทะเบียนตามที่จ่ายจริง",
         "ข้อมูลทั้งหมดของ",
+        "ข้อมูลทั้งหมดของการประชุมวิชาการ",
         "ข้อมูลทั้งหมดของโครงงานวิชาการ",
         "ข้อมูลนักวิจัย",
         "ข้อมูลผู้ขอทุน",
@@ -170,10 +172,14 @@
         "ค่าใช้จ่ายในการลงตีพิมพ์",
         "ค่าใช้จ่ายอื",
         "คาดว่าจะตีพิมพ์ในวารสาร",
+        "ค่าตั๋วเครื่องบิน",
+        "ค่าที",
+        "ค่าเบี้ยเลี้ยง",
         "ค่าเบี้ยเลี้ยงเดินทาง",
         "ค่าพาหนะเดินทาง",
         "ค่าภาษีสนามบิน",
         "ค่าลงทะเบียน",
+        "ค่าอื",
         "คุณภาพการประชุม",
         "โครงการวิจัย",
         "โครงงานวิชาการ",
@@ -391,6 +397,7 @@
         "สำเนาบทความ",
         "สำเร็จ",
         "สิงหาคม",
+        "สิทธิ",
         "หนังสือตอบรับบทความ",
         "หรือ",
         "หรือคณะเป็นผู้ร่วมจัด",
