clear npm not use

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "allpost",
         "allstatus",
         "amout",
+        "Assosiate",
         "axios",
         "caltotal",
         "checkfile",
@@ -21,6 +22,7 @@
         "insecter",
         "ISSN",
         "ject",
+        "jspdf",
         "KMITL",
         "Krisuse",
         "luxon",
@@ -36,6 +38,7 @@
         "numapprove",
         "Offi",
         "Offic",
+        "pdfmake",
         "positioneng",
         "positionth",
         "Profes",
@@ -149,6 +152,7 @@
         "ของฐานข้อมูลสากล",
         "ขอเบิก",
         "ขอเบิกค่าลงทะเบียนตามที่จ่ายจริง",
+        "ข้อมูลการประชุมวิชาการ",
         "ข้อมูลทั้งหมดของ",
         "ข้อมูลทั้งหมดของการประชุมวิชาการ",
         "ข้อมูลทั้งหมดของโครงงานวิชาการ",
@@ -217,6 +221,7 @@
         "เดือน",
         "โดยมติคณะ",
         "โดยมีการกำหนดคุณภาพแบ่งเป็น",
+        "ได้จาก",
         "ได้มาจาก",
         "ได้รับการจัดลำดับ",
         "ได้รับการตอบรับให้ตีพิมพ์",
@@ -244,6 +249,7 @@
         "ถ้ามี",
         "ถ้าไม่มีไฟล์",
         "ถึงวันที",
+        "ทวีป",
         "ทันที",
         "ทุนวิจัยส่งเสริมส่วนงานวิชาการ",
         "เท่านั",
@@ -254,6 +260,7 @@
         "ในscopus",
         "ในกรณีลาครั",
         "ในการลา",
+        "ในประเทศ",
         "บทความ",
         "บทความเข้าระบบ",
         "บทความที่ได้รับการสนับสนุน",
@@ -294,6 +301,8 @@
         "ฝ่ายบริหารทรัพยากรบุคคล",
         "พฤศจิกายน",
         "พฤษภาคม",
+        "พิมพ์แบบฟอร์ม",
+        "ฟังก์ชันจัดกลุ่มข้อมูลตาม",
         "ฟังก์ชันตรวจสอบปีปัจจุบัน",
         "ภายในประเทศ",
         "ภาษาไทย",
@@ -355,6 +364,7 @@
         "และค่าใช้จ่ายอื",
         "และจำเป็นต้องกรอกทุกช่อง",
         "และไม่อยู่ในฐานข้อมูลสากล",
+        "และลบ",
         "และวันกรอกแบบฟอร์มได้",
         "และวันประกาศผลได้",
         "และวันปัจจุบัน",
@@ -435,6 +445,7 @@
         "อผลงานวิจัย",
         "อวารสาร",
         "อแหล่งทุนวิจัย",
+        "ออกจาก",
         "ออกจากระบบ",
         "อัตราค่าใช้จ่ายที่ประกาศบนหน้าเว็บไซต์",
         "อัปเดตข้อมูลบนหน้า",
