--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.8.4",
     "chart.js": "^3.9.1",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.0",
     "luxon": "^3.5.0",
@@ -20,7 +21,8 @@
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
     "vue-select": "^4.0.0-beta.6",
-    "vue3-google-login": "^2.0.33"
+    "vue3-google-login": "^2.0.33",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
