--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,16 @@
 {
     "cSpell.words": [
+        "accom",
         "addapproved",
         "allhistory",
         "allpost",
         "allstatus",
         "amout",
+        "appeove",
         "Assosiate",
         "axios",
         "caltotal",
+        "Chage",
         "checkfile",
         "countwithdraw",
         "creat",
@@ -20,6 +23,7 @@
         "finc",
         "formattedres",
         "insecter",
+        "inthai",
         "ISSN",
         "ject",
         "jspdf",
@@ -36,6 +40,7 @@
         "Noti",
         "Notificationby",
         "numapprove",
+        "numapproved",
         "Offi",
         "Offic",
         "pdfmake",
@@ -47,13 +52,19 @@
         "reciving",
         "regist",
         "registerables",
+        "regits",
+        "responsebudget",
         "responsefile",
+        "responseoffic",
         "rowitems",
         "Sarabun",
         "SCOPUS",
         "setfile",
         "sjrh",
         "Symp",
+        "totalapprove",
+        "totalapproved",
+        "totalcredit",
         "trav",
         "updatesignature",
         "urlfile",
@@ -76,6 +87,7 @@
         "กรุณากรอกข้อมูลชื",
         "กรุณากรอกข้อมูลเดินทาง",
         "กรุณากรอกข้อมูลปี",
+        "กรุณากรอกข้อมูลปีงบประมาณเป็นพ",
         "กรุณากรอกข้อมูลปีที",
         "กรุณากรอกข้อมูลเป็นตัวเลข",
         "กรุณากรอกข้อมูลเป็นภาษาไทย",
@@ -83,15 +95,18 @@
         "กรุณากรอกข้อมูลลำดับ",
         "กรุณากรอกข้อมูลวันเดินทางกลับ",
         "กรุณากรอกข้อมูลวันที",
+        "กรุณากรอกความคิดเห็น",
         "กรุณากรอกค่า",
         "กรุณากรอกค่าเป็น",
         "กรุณากรอกจำนวนค่าเช่าที",
         "กรุณากรอกจำนวนค่าเบี้ยเลี้ยงเดินทาง",
         "กรุณากรอกจำนวนค่าลงทะเบียน",
+        "กรุณากรอกจำนวนเงิน",
         "กรุณากรอกจำนวนบทความ",
         "กรุณากรอกจำนวนวันที่เช่าที่พัก",
         "กรุณากรอกจำนวนวันที่เดินทาง",
         "กรุณากรอกชื",
+        "กรุณากรอกตัวเลข",
         "กรุณากรอกประเทศ",
         "กรุณากรอกประเภทงานวิจัย",
         "กรุณากรอกปี",
@@ -130,6 +145,8 @@
         "กรุณาเลือกสูตรที่ใช้ในการคำนวณ",
         "กรุณาอัปโหลดไฟล์",
         "ก่อนกรอง",
+        "ก่อนการตอบรับบทความ",
+        "ก่อนการตอบรับบทความจากผู",
         "ก่อนการประชุม",
         "กันยายน",
         "การตอบรับให้ลงตีพิมพ์",
@@ -147,28 +164,35 @@
         "แก้เงื่อนไขการพิจารณา",
         "แก้ด้วย",
         "แก้วสีดา",
+        "ขณะนี้บทความได้รับการตอบรับแล้ว",
         "ของคณะได้ที่เว็บไซต์คณะที่",
         "ของงานวิจัย",
         "ของฐานข้อมูลสากล",
         "ขอเบิก",
         "ขอเบิกค่าลงทะเบียนตามที่จ่ายจริง",
         "ข้อมูลการประชุมวิชาการ",
+        "ข้อมูลถูกต้อง",
         "ข้อมูลทั้งหมดของ",
         "ข้อมูลทั้งหมดของการประชุมวิชาการ",
         "ข้อมูลทั้งหมดของโครงงานวิชาการ",
         "ข้อมูลนักวิจัย",
         "ข้อมูลผู้ขอทุน",
+        "ข้อมูลไม่ถูกต้อง",
         "ข้อมูลส่วนตัว",
         "ขอรับการสนับสนุน",
         "ขออนุมัติค่า",
         "เข้าที่ประชุม",
         "เข้าสู่ระบบ",
+        "คงเหลือ",
+        "คงเหลือทั",
         "คณบดี",
+        "คณบดีคณะเทคโนโลยีสารสนเทศ",
         "คณะจัด",
         "คณะได้ให้การรับรองแล้ว",
         "คณะร่วมจัด",
         "ค้นหา",
         "ค้นหาผลงานวิชาการ",
+        "ความคิดเห็น",
         "คะแนน",
         "คะแนนไม่สามารถต่ำกว่า",
         "ค่าเช่าที",
@@ -180,11 +204,15 @@
         "ค่าที",
         "ค่าเบี้ยเลี้ยง",
         "ค่าเบี้ยเลี้ยงเดินทาง",
+        "ค่าเบี้ยเลี้ยงเดินทางไม่เกิน",
         "ค่าพาหนะเดินทาง",
         "ค่าภาษีสนามบิน",
         "ค่าลงทะเบียน",
         "ค่าอื",
+        "คำนวณ",
+        "คำนวณจาก",
         "คุณภาพการประชุม",
+        "คุณภาพของการประชุม",
         "โครงการวิจัย",
         "โครงงานวิชาการ",
         "งได้รับการตีพิมพ์ไม่เกิน",
@@ -200,6 +228,8 @@
         "จำนวน",
         "จำนวนเงิน",
         "จำนวนเงินคงเหลือทั",
+        "จำนวนเงินทั",
+        "จำนวนเงินที่ขออนุมัติจัดสรรในครั้งนี้",
         "จำนวนเงินที่ใช้ไปแล้ว",
         "ฉบับที",
         "ชื่อผลงานวิจัยที่นำเสนอ",
@@ -231,6 +261,7 @@
         "ตรวจว่าวันที่ไม่เกิดก่อนวันนี้",
         "ตรวจว่าวันที่ไม่อยู่หลัง",
         "ตรวจว่าวันที่ไม่อยู่หลังวันนี้",
+        "ตรวจสอบข้อมูลและหลักฐาน",
         "ตรวจสอบปีและวันที",
         "ตรวจสอบว่าข้อมูลเป็น",
         "ตรวจสอบว่าทุกค่ามีข้อมูล",
@@ -239,6 +270,7 @@
         "ต้องไม่เกิน",
         "ต้องไม่เกินวันนี",
         "ต้องอยู่ในช่วง",
+        "ตัวแปรสำหรับเก็บข้อมูลจาก",
         "ตัวเลือก",
         "ต่างประเทศ",
         "ตามที่จ่ายจริง",
@@ -249,6 +281,7 @@
         "ถ้ามี",
         "ถ้าไม่มีไฟล์",
         "ถึงวันที",
+        "ถูกต้อง",
         "ทวีป",
         "ทันที",
         "ทุนวิจัยส่งเสริมส่วนงานวิชาการ",
@@ -261,6 +294,7 @@
         "ในกรณีลาครั",
         "ในการลา",
         "ในประเทศ",
+        "ในระดับ",
         "บทความ",
         "บทความเข้าระบบ",
         "บทความที่ได้รับการสนับสนุน",
@@ -282,11 +316,14 @@
         "ประวัติด้านสิ่งประดิษฐ์",
         "ประวัติเอกสาร",
         "ปีงบประมาณ",
+        "ปีงบประมาณต้องไม่เกิน",
+        "ปีงบประมาณต้องไม่ต่ำกว่า",
         "ปีที",
         "ปีไม่สามารถน้อยกว่าปีปัจจุบันได้",
         "ปีไม่สามารถเป็นปีที่มากกว่าปีนี้",
         "ปีไม่สามารถเป็นปีที่มากกว่าปีปัจจุบัน",
         "ปีไม่สามารถมากกว่าปีปัจจุบันได้",
+        "เป็นจำนวนเงิน",
         "เป็นวารสารที่อยู่ในฐานข้อมูลสากล",
         "โปรดกรอกข้อมูลให้ครบถ้วน",
         "โปรดเข้าสู่ระบบใหม่อีกครั้ง",
@@ -301,6 +338,7 @@
         "ฝ่ายบริหารทรัพยากรบุคคล",
         "พฤศจิกายน",
         "พฤษภาคม",
+        "พักไม่เกิน",
         "พิมพ์แบบฟอร์ม",
         "ฟังก์ชันจัดกลุ่มข้อมูลตาม",
         "ฟังก์ชันตรวจสอบปีปัจจุบัน",
@@ -324,6 +362,8 @@
         "เมษายน",
         "ไม่เกิน",
         "ไม่ใช่",
+        "ไม่ต่ำกว่า",
+        "ไม่ถูกต้อง",
         "ไม่บังคับ",
         "ไม่มีข้อมูล",
         "ไม่มีวัตถุประสงค์เพื่อประโยชน์ทางการค้า",
@@ -335,10 +375,13 @@
         "ไม่อนุมัติ",
         "ไม่อยู",
         "ยอดที่ใช้ของการขออนุมัติค่า",
+        "ยืนยันข้อมูลถูกต้อง",
         "ยืนยันตัวตนด้วยบริการของ",
         "แยกตารางไปscore",
         "รวมทั",
+        "รวมเป็นเงิน",
         "รองคณบดี",
+        "รองคณบดีฝ่ายงานวิจัย",
         "ร้อยละการมีส่วนร่วมในโครงการ",
         "รออนุมัติ",
         "ระดับ",
@@ -347,12 +390,15 @@
         "ระบบสนับสนุนงานบริหารงานวิจัย",
         "ระบุ",
         "ระยะเวลาโครงการ",
+        "รับทราบ",
         "รับสนับสนุน",
+        "รายการ",
         "รายการค่าใช้จ่ายที่ขอเบิกจ่าย",
         "รายละเอียดการขออนุมัติเดินทาง",
         "รายละเอียดเบื้องต้น",
         "รายละเอียดผลงานวิจัยที่ส่งเสนอพิจารณา",
         "รายละเอียดวารสารที่ส่งเสนอพิจารณา",
+        "เรียน",
         "ลาครั",
         "ลายเซ็น",
         "ลำดับ",
@@ -363,6 +409,7 @@
         "เลือกวงเงินสนับสนุน",
         "และค่าใช้จ่ายอื",
         "และจำเป็นต้องกรอกทุกช่อง",
+        "และถูกต้อง",
         "และไม่อยู่ในฐานข้อมูลสากล",
         "และลบ",
         "และวันกรอกแบบฟอร์มได้",
@@ -371,7 +418,9 @@
         "และสกุลไฟล์เป็น",
         "วงเงินงบประมาณการวิจัย",
         "วงเงินตามเกณฑ์การให้การสนับสนุนไม่เกิน",
+        "วงเงินที่คณะจัดสรรไว้",
         "วงเงินที่เบิกได้",
+        "วงเงินที่สามารถเบิกได้",
         "วันเดินทางกลับไม่สามารถเกิดก่อนวันไปได้",
         "วันเดินทางไม่สามารถเกิดก่อน",
         "วันที",
@@ -434,6 +483,7 @@
         "อการประชุมทางวิชาการ",
         "อแก้ไข",
         "อโครงการวิจัย",
+        "องจาก",
         "องานประชุม",
         "องานประชุมวิชาการ",
         "องานวิจัย",
@@ -441,9 +491,12 @@
         "อนุมัติ",
         "อบทความ",
         "อประโยชน์ทางการค้า",
+        "อโปรดทราบการจัดสรรวงเงิน",
         "อผลงานตีพิมพ์",
         "อผลงานวิจัย",
+        "อวันที",
         "อวารสาร",
+        "อแสดงสถานะว่ากำลังโหลดข้อมูล",
         "อแหล่งทุนวิจัย",
         "ออกจาก",
         "ออกจากระบบ",
